--- a/index.html
+++ b/index.html
@@ -48,16 +48,16 @@ From business cards to brochures, our print design services will elevate your ma
          <section class="testimonials">
           <h2><i> Testimonials</i></h2>
       <article>
-<img src="dgl3.jpg" alt="" id="p1">
 <p>
+  <img src="dgl3.jpg" alt="" id="p1">
 <b>Client A</b><br>
 "Working with this graphic design company was a game-changer for my business. They understood my vision and delivered outstanding results. Highly recommended!"</p>
-<img src="dgl4.jpg" alt="" id="p2">
 <p>
+  <img src="dgl4.jpg" alt="" id="p2">
 <b>Client B</b><br>
 "I couldn't be happier with the designs created by this company. They were attentive to my needs and delivered beyond expectations. Truly impressive work."</p>
-<img src="dgl5.jpg" alt="" id ="p3">
 <p>
+<img src="dgl5.jpg" alt="" id ="p3">
   <b>Client C</b><br>
 "The team at this graphic design company is incredibly talented. Their attention to detail and creativity helped me elevate my brand. I'm grateful for their expertise."</p>
 </article>
@@ -68,25 +68,28 @@ From business cards to brochures, our print design services will elevate your ma
          <section class="contact">
            <h2><i>Contact Us</i></h2>
 <article id=a>
- <p> <b>Location</b><br>
+ <p> <img src="la.jpeg">
 123 Main Street
-City, State, ZIP</p>
-<p><b>Email</b><br>
-info@example.com</p>
-<p><b>Phone</b><br>
-+1 (555) 123-4567</p>
+City, State, ZIP
+</p>
+<p>
+  <img src="mail.png">info@example.com</p>
+<p>
+  <img src="ph.jpeg">
++1 (555) 123-4567
+</p>
 </article>
 <article id ="b">
   <p>
-    <b>Facebook</b><br>
+    <img src="fb.png" >
     dannygraphic
   </p>
   <p>
-    <b>Instagram</b><br>
+    <img src="ig.jpeg">
     dannygraphic
   </p>
   <p>
-    <b>Whatsapp</b><br>
+    <img src="wa.png">
     dannygraphic
   </p>
 </article>
@@ -95,4 +98,5 @@ info@example.com</p>
          <p style="text-align:center"><a href="#top" >Move To The Top</a></p>
        </footer>
      </body>
-</html>
+         </html>
+       
