--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
   <div class="founder">
     <img src="pics/found.jpg" alt="" id="found">
   <p><b>Daniel Ude</b><br>
-    Founder Of Danny Graphics</p>
+  Graphic Designer</p>
 </div>
 </div>
     <div id="link">
